--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,10 @@ pre-commit = "^4.3.0"
 black = "^25.1.0"
 isort = "^6.0.1"
 
+[tool.isort]
+profile = "black"
+line_length = 88
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
