--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.11"
 mypy = "^1.17.1"
-pytest = "0"
+pytest = "^8.4.1"
 pre-commit = "^4.3.0"
 black = "^25.1.0"
 isort = "^6.0.1"
