--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "numpy (>=2.3.2,<3.0.0)",
-    "matplotlib (>=3.10.5,<4.0.0)"
+    "matplotlib (>=3.10.5,<4.0.0)",
+    "flask (>=3.1.2,<4.0.0)"
 ]
 
 [tool.poetry]
+packages = [{ include = "n_armed_bandits", from = "src" }]
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.12.11"
