--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ requires-python = ">=3.13"
 dependencies = [
     "numpy (>=2.3.2,<3.0.0)",
     "matplotlib (>=3.10.5,<4.0.0)",
-    "flask (>=3.1.2,<4.0.0)"
+    "flask (>=3.1.2,<4.0.0)",
+    "plotly (>=6.3.0,<7.0.0)"
 ]
 
 [tool.poetry]
