--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,3 +33,7 @@ line_length = 88
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["src/tests"]
