--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "numpy (>=2.3.2,<3.0.0)",
     "matplotlib (>=3.10.5,<4.0.0)",
     "flask (>=3.1.2,<4.0.0)",
-    "plotly (>=6.3.0,<7.0.0)"
+    "plotly (>=6.3.0,<7.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)"
 ]
 
 [tool.poetry]
